--- a/public/StaticViews/Index.html
+++ b/public/StaticViews/Index.html
@@ -3,36 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="../javascripts/jQuery/jquery-2.2.3.min.js"></script>
     <script src="../javascripts/echars/echarts.min.js"></script>
+    <script src="../javascripts/common/demo.js"></script>
+
+    <link rel="stylesheet" href="../stylesheets/CmnStyle.css">
 </head>
 <body>
-<div id="main" style="width: 600px;height:400px;"></div>
-<script type="text/javascript">
-  // 基于准备好的dom，初始化echarts实例
-  var myChart = echarts.init(document.getElementById('main'));
-
-  // 指定图表的配置项和数据
-  var option = {
-    title: {
-      text: 'ECharts 入门示例'
-    },
-    tooltip: {},
-    legend: {
-      data:['销量','库存']
-    },
-    xAxis: {
-      data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
-    },
-    yAxis: {},
-    series: [{
-      name: '销量',
-      type: 'bar',
-      data: [5, 20, 36, 10, 10, 20]
-    },{name:'库存',type:'bar',data:[10, 66, 45, 23, 53, 65]}]
-  };
-
-  // 使用刚指定的配置项和数据显示图表。
-  myChart.setOption(option);
-</script>
+<div id="main" style="width: 800px; height: 600px;"></div>
 </body>
 </html>
