--- a/public/StaticViews/Index.html
+++ b/public/StaticViews/Index.html
@@ -3,13 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <link rel="stylesheet" href="../stylesheets/cmnstyle.css">
+    <link rel="stylesheet" href="../stylesheets/fullPage/jquery.fullPage.css">
+
     <script src="../javascripts/jQuery/jquery-2.2.3.min.js"></script>
+    <script src="../javascripts/fullPage/jquery.fullPage.min.js"></script>
     <script src="../javascripts/echars/echarts.min.js"></script>
     <script src="../javascripts/common/demo.js"></script>
 
-    <link rel="stylesheet" href="../stylesheets/CmnStyle.css">
 </head>
 <body>
-<div id="main" style="width: 800px; height: 600px;"></div>
+<div class="main-top">
+    <nav>
+
+    </nav>
+</div>
+<div id="fullpage">
+    <div class="section sec-gud">
+        <section>
+            <h1>DK.RS</h1>
+        </section>
+    </div>
+    <div class="section sec-bi">
+        <section>
+            <p></p>
+        </section>
+    </div>
+    <div class="section sec-demo">
+        <div id="main"></div>
+    </div>
+    <div class="section">Some section</div>
+</div>
 </body>
 </html>
