add charts demo

--- a/public/StaticViews/index.html
+++ b/public/StaticViews/index.html
@@ -1,47 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
 
-    <link rel="stylesheet" href="../stylesheets/cmnstyle.css">
-    <link rel="stylesheet" href="../stylesheets/fullPage/jquery.fullPage.css">
+  <link rel="stylesheet" href="../stylesheets/style.css">
+  <link rel="stylesheet" href="../stylesheets/fullPage/jquery.fullPage.css">
 
-    <script src="../javascripts/jQuery/jquery-2.2.3.min.js"></script>
-    <script src="../javascripts/fullPage/jquery.fullPage.min.js"></script>
-    <script src="../javascripts/echars/echarts.min.js"></script>
-    <script src="../javascripts/common/demo.js"></script>
+  <script src="../javascripts/jQuery/jquery-2.2.3.min.js"></script>
+  <script src="../javascripts/fullPage/jquery.fullPage.min.js"></script>
+  <script src="../javascripts/echars/echarts.min.js"></script>
+  <script src="../javascripts/common/demo.js"></script>
 
 </head>
 <body>
 <div class="main-top">
-    <nav>
-        <ul class="nav-menu">
-            <li><a href="javascript:">hello</a></li>
-            <li><a href="javascript:">demo</a></li>
-            <li><a href="javascript:">doc</a></li>
-            <li><a href="javascript:">license</a></li>
-        </ul>
-    </nav>
+  <nav>
+    <ul class="nav-menu">
+      <li><a href="javascript:">hello</a></li>
+      <li><a href="javascript:">demo</a></li>
+      <li><a href="javascript:">doc</a></li>
+      <li><a href="javascript:">license</a></li>
+    </ul>
+  </nav>
 </div>
 <div id="main-content">
-    <div class="section sec-gud">
-        <section>
-            <h1>DK.RS</h1>
-        </section>
+  <div class="section sec-gud">
+    <section>
+      <h1>DK.RS</h1>
+    </section>
+  </div>
+  <div class="section sec-demo">
+    <div>
+      <ul class="chart-Category">
+        <li id="chart-line" class="line">line</li>
+        <li id="chart-bar" class="bar">bar</li>
+        <li id="chart-pie" class="pie">pie</li>
+        <li id="chart-scatter" class="scatter">scatter</li>
+      </ul>
     </div>
-    <div class="section sec-demo">
-        <div id="charts"></div>
-    </div>
-    <div class="section sec-bi">
-        <section>
-            <p></p>
-        </section>
-    </div>
-    <div class="section"></div>
-    <div class="section sec-bot fp-auto-height">
-        <section class="bottom"></section>
-    </div>
+    <div id="charts"></div>
+  </div>
+  <div class="section sec-bi">
+    <section>
+      <p></p>
+    </section>
+  </div>
+  <div class="section"></div>
+  <div class="section sec-bot fp-auto-height">
+    <section class="bottom"></section>
+  </div>
 </div>
 </body>
 </html>
